# kuka-bartender

./: .gitignore  README.md
bartender_control/: CMakeLists.txt  bartender_control_plugins.xml  package.xml
bartender_control/include/bartender_control/: one_task_inverse_kinematics.h
bartender_control/msg/: bartender_msg.msg
bartender_control/src/: one_task_inverse_kinematics.cpp
bartender_description/: CMakeLists.txt  package.xml
bartender_description/config/: bartender_controllers.yaml  bottles.yaml  hardware_interfaces.yaml
bartender_description/launch/: bartender_description.launch  bartender_description.launch.orig  rviz_config.rviz
bartender_description/model/: bottle.urdf.xacro  calibrator.urdf.xacro  glass.urdf.xacro
bartender_description/robot/: bartender.urdf.xacro  environment.urdf.xacro
bartender_description/worlds/: simple_environment.world  simple_environment.world.orig
bartender_manager/: CMakeLists.txt  package.xml
bartender_manager/include/: BartenderManager.h
bartender_manager/launch/: bartender_manager.launch
bartender_manager/src/: bartender_manager.cpp  commenti~  main.cpp
bartender_manager/srv/: BartenderManagerSrv.srv
